css/tufte.scss
/* ... */
li .sidenote, li .marginnote{ margin-right: -80%; } //added to allow for the fact that lists are indented and marginnotes and sidenotes push to right

blockquote .sidenote, blockquote .marginnote { margin-right: -79% }

.sidenote-number { counter-increment: sidenote-counter; }

.sidenote-number:after, .sidenote:before { content: counter(sidenote-counter) " ";
                                           font-family: et-bembo-roman-old-style;
                                           color: $contrast-color; //added color
                                           position: relative;
                                           vertical-align: baseline; }

.sidenote-number:after { content: counter(sidenote-counter);
                         font-size: 1rem;
                         top: -0.5rem;
                         left: 0.1rem; }

.sidenote:before { content: counter(sidenote-counter) ".\000a0"; // this is unicode for a non-breaking space
                   color: $contrast-color;
                   top: 0rem; } //removed superscripting for numerical reference in sidenote

p, footer, div.table-wrapper, div.mathblock{ width: 55%; }

div.table-wrapper { overflow-x: auto; } //changed all overflow values to 'auto' so scroll bars appear only as needed

@media screen and (max-width: 760px) { p, footer,div.mathblock { width: 90%; }
                                       pre code { width: 87.5%; }
                                       ul { width: 85%; }
                                       figure { max-width: 90%; }
                                       figcaption, figure.fullwidth figcaption { margin-right: 0%;
                                                                                 max-width: none; }
                                       blockquote p, blockquote footer {  width: 80%;
                                                                          padding-left: 5%;
                                                                          padding-right: 5%;
                                                                        }}

.marginnote code, .sidenote code { font-size: 1rem; } //more .code class removal

pre, pre code, p pre code { width: 52.5%;
           padding-left: 2.5%;
           overflow-x: auto; }

.fullwidth, li.listing div{ max-width: 90%; }

.full-width { .sidenote, .sidenote-number, .marginnote { display: none; } }

span.newthought { font-variant: small-caps;
                  font-size: 1.2em;
                  letter-spacing: 0.05rem; }

input.margin-toggle { display: none; }

label.sidenote-number { display: inline; }

label.margin-toggle:not(.sidenote-number) { display: none; }

@media (max-width: 760px) { label.margin-toggle:not(.sidenote-number) { display: inline; color: $contrast-color; }
                            .sidenote, .marginnote { display: none; }
                            .margin-toggle:checked + .sidenote,
                            .margin-toggle:checked + .marginnote { display: block;
                                                                   float: left;
                                                                   left: 1rem;
                                                                   clear: both;
                                                                   width: 95%;
                                                                   margin: 1rem 2.5%;
                                                                   vertical-align: baseline;
                                                                   position: relative; }
                            label { cursor: pointer; }
                            pre, pre code, p code, p pre code { width: 90%;
                                       padding: 0; }
                            .table-caption { display: block;
                                             float: right;
                                             clear: both;
                                             width: 98%;
                                             margin-top: 1rem;
                                             margin-bottom: 0.5rem;
                                             margin-left: 1%;
                                             margin-right: 1%;
                                             vertical-align: baseline;
                                             position: relative; }
                            div.table-wrapper, table, table.booktabs { width: 85%; }
                            div.table-wrapper { border-right: 1px solid #efefef; }
                            img { max-width: 100%; } }
/*--- End of Basic Layout stuff from tufte.css ---*/

/* -- Jekyll specific styling --*/
//helper classes

.contrast { color: $contrast-color;}
.smaller { font-size: 80%;}
//Nav and Footer styling area

header > nav.group, body footer {
  width: 95%;
  padding-top: 2rem;
  padding-bottom: 0.25rem;
}

nav.group a.active:before{ content:"\0003c\000a0";} // escaped unicode for the carats and then a space on active menu links
nav.group a.active:after{ content:"\000a0\0003e" ;}
nav.group a.notactive:before{ content:"\000a0\000a0\000a0";}
nav.group a.notactive:after{ content:"\000a0\000a0\000a0";}

header > nav  a{
  font-size: 1.2rem;
  font-family: $sans-font;
  letter-spacing: 0.15em;
  text-transform: uppercase;
  color: $contrast-color;
  padding-top: 1.5rem;
  text-decoration: none;
  display: inline-block;
  float: justify;
  margin-top: 0;
  margin-bottom: 0;
  padding-right: 2rem;
  //margin-left: 1rem;
  vertical-align: baseline;
}
header > nav a img{
  height: 5rem;
  position: relative;
  max-width: 100%;
  top:-1.5rem;
}
header > ul a{
  padding-right: 0.25rem;
}
ul.footer-links, .credits{
  list-style: none;
  text-align: center;
  margin: 0 auto;
}
ul.footer-links li{
  display: inline;
  padding: 0.5rem 0.25rem;
}
.credits{
  padding: 1rem 0rem;
}
/* ... */

